# rusty-test

./: Cargo.toml  README.md  bigfile.csv  out.json
src/: main.rs
