[package]
name = "bztest"
version = "0.1.0"
authors = ["Jêrome Rx <jerome+git@rouaix.eu>"]
edition = "2018"

[dependencies]
csv = "1"
serde_derive = "1"
serde = "1"
serde_json = "1"
# enum_derive = "0.1"
clap = "2"
xml-rs = "0.8"
actix-web = "0.7"
actix = "0.7"
actix-web-async-await = "0.2"
reqwest = "0.9"
url = "1"
futures = "0.1"
bytes = "0.4"
tokio = "0.1"