[package]
name = "bztest"
version = "0.1.0"
authors = ["Jêrome Rx <jerome+git@rouaix.eu>"]
edition = "2018"


[dependencies]
csv = "1.0.7"
serde_derive = "1.0.91"
serde = "1.0.91"
serde_json = "1.0.39"
# enum_derive = "0.1"
clap = "2.33.0"
xml-rs = "0.8.0"
actix-web = "0.7.19"
actix = "0.8.1"
reqwest = "0.9.16"
url = "1.7.2"
futures = "0.1.27"
bytes = "0.4.12"